--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=jobportal
-spring.datasource.url=jdbc:mysql://localhost:3306/jobportal?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+# spring.datasource.url=jdbc:mysql://localhost:3306/jobportal?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:28109/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.username=railway
+spring.datasource.password=nVvkrxhsjBCvHQLWgVMZGKNIhQKUTXib
+# spring.datasource.username=root
+# spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-server.port=8093
 spring.jpa.show-sql=true
